--- a/src/components/AddMovieForm/AddMovieForm.module.css
+++ b/src/components/AddMovieForm/AddMovieForm.module.css
@@ -44,6 +44,14 @@
   box-sizing: border-box;
   border-radius: 10px;
 }
+.addmovie__select {
+  width: 90%;
+  height: 43px;
+  background: #ffffff;
+  border: 2px solid #4361ee;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
 .addmovie__submit {
   margin-top: 1rem;
   width: 90%;
