--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,20 +14,25 @@
 .navbar__item {
   margin-bottom: 1rem;
 }
+.navbar__link {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
 
-@media(min-width :768px){
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .navbar__brand{
-        margin: 0;
-    }
-    .navbar__list{
-        display: flex;
-    }
-    .navbar__item{
-        margin: 0 1rem;
-    }
+@media (min-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .navbar__brand {
+    margin: 0;
+  }
+  .navbar__list {
+    display: flex;
+  }
+  .navbar__item {
+    margin: 0 1rem;
+  }
 }
